[package]
name = "ssb-common"
version = "0.2.4"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Common types and data among various ssb modules."
repository = "https://github.com/ssbc/ssb-common-rs"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
sodiumoxide = "0.0.16"
base64 = "0.9.0"
regex = "0.2.6"
lazy_static = "1.0.0"
serde = "1.0.27"
serde_derive = "1.0.27"
secret_handshake = "4.0.0"

[dev-dependencies]
serde_json = "1.0.10"
