[package]
name = "ssb-common"
version = "0.3.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Common types and data among various ssb modules."
repository = "https://github.com/sunrise-choir/ssb-common-rs"
readme = "README.md"
license = "LGPL-3.0"

[dependencies]
dirs = "1.0"
sodiumoxide = "0.2.1"
base64 = "0.10"
regex = "1.1"
lazy_static = "1.0.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"
